# spark

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
.conan2/profiles/: default
.github/workflows/: build.yml  release.yml
src/: plugin.cpp  spark_constants.h
src/alloc/: allocation_sampler.h  allocation_sampler_linux.cpp  allocation_sampler_stub.cpp  allocation_sampler_windows.cpp  byte_sampler.h  elf_import_hooks.cpp  elf_import_hooks.h
src/command/: arguments.cpp  arguments.h
src/net/: bytebin.cpp  bytebin.h  profile_file.cpp  profile_file.h
src/proto/: sampler_data.cpp  sampler_data.h
src/sampler/: call_tree.h  capture_windows.cpp  profile_mode.h  profiler.cpp  profiler.h  sampler.cpp  sampler.h  symbolicate.cpp  symbolicate.h  thread_info.cpp  thread_info.h  types.h
src/stats/: executable_hash.cpp  executable_hash.h  server_stats.cpp  server_stats.h  system_stats.cpp  system_stats.h  tick_monitor.cpp  tick_monitor.h
tools/: selftest.cpp
